--- a/Tool/分库分表.md
+++ b/Tool/分库分表.md
@@ -27,7 +27,7 @@
 - 切分规则难以抽象
 - 分片事务的一致性难以解决
 
-### 分布算法
+### 切分算法
 1. MD5哈希
 做法是对UID进行md5加密，然后取前几位，然后就可以将不同的UID哈希到不同的用户表（user_xx）中了。
 ```javascript
