--- a/Tool/缓存和数据库一致性.md
+++ b/Tool/缓存和数据库一致性.md
@@ -19,3 +19,33 @@
 ```
 主要是并发场景下，多个线程同时更新数据库，由于网络原因后面请求的线程先完成更新操作可能导致数据库数据不是最新的。第二个问题更新缓存的值可能是经过一系列计算得到的，而且数据不常命中频繁更新会影响系统性能。
 ```
+## 缓存穿透
+查询一个缓存层和数据库存储层都不会命中的数据。导致每次请求都去查询数据存储层，也就失去缓存保护数据存储层的意义。  
+这种情况传入错误的参数，每次都查询数据库，并且返回空值，业务代码也不缓存空值，如果恶意攻击系统可以压垮数据库。**可能出现的原因：**  
+
+- 业务代码问题或者数据问题
+- 恶意攻击，爬虫造成的非法请求
+
+**解决方案**  
+> 1.缓存空对象
+```
+大量的空值被缓存，会占用内存空间，【通常通过TTL设置较短时间如60秒】，但遇到恶意攻击情况非常严重  
+```
+> 2. 布隆过滤拦截
+
+在访问缓存层和存储层前，将存在的Key用布隆过滤器保存起来，做第一层的拦截
+## 缓存雪崩
+指在某一段时间，缓存集中失效或者缓存服务器宕机，导致所有请求查询同一时间落在数据库上面，数据库产生周期性的压力波峰。
+
+**解决方案**  
+> 1. 缓存集中失效情况可以对缓存数据的TTL时间上面加上1-10分钟的随机数
+
+> 2. 如果缓存服务器宕机则考虑主备或者集群
+
+## 缓存击穿
+指缓存数据非常热点，大量的并发请求集中访问该热点数据【如热搜，明星绯闻】，当这个缓存在失效的一个瞬间，持续大量的请求就会落在数据库上。
+
+**解决方案**
+> 1. 不设置TTL
+
+> 2. 互斥锁，此方法指运行一个线程重构缓存，其它线程必须等待重构缓存线程执行完才能获取缓存数据。该资源加锁，访问该资源先判断是否有线程在重新构建，如果有等待构建结束在执行。
