--- a/Tool/缓存和数据库一致性.md
+++ b/Tool/缓存和数据库一致性.md
@@ -3,11 +3,13 @@
 个人观点缓存注意下面两点  
 >1. **缓存必须设置TTL**  
 ```
-缓存数据在系统中的命中率越高说明性能越好。假设缓存没有设置TTL，它的命中率低，这就会浪费缓存空间。如果有设置TTL，并且命中率高，我们可以在每次命中的时候刷新TTL，就可以保证热点数据一直在缓存中提高系统的性能。如果出现不一致情况，设置TTL只会出现子缓存不一致开始到TTL结束这段时间。
+缓存数据在系统中的命中率越高说明性能越好。假设缓存没有设置TTL，它的命中率低，这就会浪费缓存空间。  
+如果有设置TTL，并且命中率高，我们可以在每次命中的时候刷新TTL，就可以保证热点数据一直在缓存中提高系统的性能。如果出现不一致情况，设置TTL只会出现子缓存不一致开始到TTL结束这段时间。
 ```
 >2. **系统保证数据库和缓存数据的最终一致性，无需追求强一致性。**  
 ```
-缓存和数据库属于独立的系统，如果系统要求强一致性，就需要2PC或者Paxos等分布式协议，或者分布式锁，但实现还是有难度并且会影响系统性能，这是需要权衡的。
+缓存和数据库属于独立的系统，如果系统要求强一致性，就需要2PC或者Paxos等分布式协议，或者分布式锁，  
+但实现还是有难度并且会影响系统性能，这是需要权衡的。
 ```
 ## 缓存数据库读写顺序
 >1. **经典方案Cache Aside Pattern**  
@@ -17,7 +19,8 @@
 ```
 >2. 先更新数据库，再更新缓存。  
 ```
-主要是并发场景下，多个线程同时更新数据库，由于网络原因后面请求的线程先完成更新操作可能导致数据库数据不是最新的。第二个问题更新缓存的值可能是经过一系列计算得到的，而且数据不常命中频繁更新会影响系统性能。
+主要是并发场景下，多个线程同时更新数据库，由于网络原因后面请求的线程先完成更新操作可能导致数据库数据不是最新的。  
+第二个问题更新缓存的值可能是经过一系列计算得到的，而且数据不常命中频繁更新会影响系统性能。
 ```
 ## 缓存穿透
 查询一个缓存层和数据库存储层都不会命中的数据。导致每次请求都去查询数据存储层，也就失去缓存保护数据存储层的意义。  
@@ -27,7 +30,7 @@
 - 恶意攻击，爬虫造成的非法请求
 
 **解决方案**  
-> 1.缓存空对象
+> 1. 缓存空对象
 ```
 大量的空值被缓存，会占用内存空间，【通常通过TTL设置较短时间如60秒】，但遇到恶意攻击情况非常严重  
 ```
@@ -48,4 +51,5 @@
 **解决方案**
 > 1. 不设置TTL
 
-> 2. 互斥锁，此方法指运行一个线程重构缓存，其它线程必须等待重构缓存线程执行完才能获取缓存数据。该资源加锁，访问该资源先判断是否有线程在重新构建，如果有等待构建结束在执行。
+> 2. 互斥锁，此方法指运行一个线程重构缓存，其它线程必须等待重构缓存线程执行完才能获取缓存数据。  
+该资源加锁，访问该资源先判断是否有线程在重新构建，如果有等待构建结束在执行。
