--- a/Tool/缓存和数据库一致性.md
+++ b/Tool/缓存和数据库一致性.md
@@ -4,7 +4,8 @@
 >1. **缓存必须设置TTL**  
 ```
 缓存数据在系统中的命中率越高说明性能越好。假设缓存没有设置TTL，它的命中率低，这就会浪费缓存空间。  
-如果有设置TTL，并且命中率高，我们可以在每次命中的时候刷新TTL，就可以保证热点数据一直在缓存中提高系统的性能。如果出现不一致情况，设置TTL只会出现子缓存不一致开始到TTL结束这段时间。
+如果有设置TTL，并且命中率高，我们可以在每次命中的时候刷新TTL，就可以保证热点数据一直在缓存中提高系统的性能。  
+如果出现不一致情况，设置TTL只会出现子缓存不一致开始到TTL结束这段时间。
 ```
 >2. **系统保证数据库和缓存数据的最终一致性，无需追求强一致性。**  
 ```
